--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="feathered-insight.png" alt="Feathered Insight Logo">
+            <img src="feather-insight.png" alt="Feathered Insight Logo">
         </div>
         <nav>
             <ul>
